--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 	<title>Code Wars</title>
 </head>
 <body>
+<h1> This page has been created to test the functions</h1>
 <script type="text/javascript" src="Training.js"></script>
+<script type="text/javascript" src="Code Wars Canada.js"></script>
 </body>
 </html>
